Proofread doc/jvm_py.rst
Major fix: the "Additional Flags for startJVM()" section and its
preceding example both used a fabricated jvmOptions= kwarg plus
attachThread/disableGC/stackTrace/initializers kwargs that don't
exist on jpype.startJVM() -- verified against the real signature,
these would raise TypeError if run. Corrected to the actual API: JVM
flags are positional (*jvmargs), jvmpath/modulepath are lowercase,
and add_modules/add_opens/add_exports/add_reads/interrupt/
minimum_version are documented instead of the invented options.

Also fixed several typos (consisted->considered, unncessary->
unnecessary, explicity->explicitly, a grammar fix in the shutdownJVM
history note) and trimmed two purely restating "Summary" sections
that added nothing beyond the Best-Practices lists right above them.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>